--- a/ios/Runner/SheelaAI/SheelaAI.storyboard
+++ b/ios/Runner/SheelaAI/SheelaAI.storyboard
@@ -146,6 +146,12 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="typeName" value="ballScaleMultiple"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Listening ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N8s-VU-kSf">
+                                <rect key="frame" x="140.5" y="393" width="133.5" height="29"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4a-yO-p9H">
                                 <rect key="frame" x="80" y="430" width="254" height="36"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
@@ -157,9 +163,11 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="v4a-yO-p9H" firstAttribute="centerX" secondItem="veM-Df-oDf" secondAttribute="centerX" id="EeJ-VU-qeO"/>
+                            <constraint firstItem="N8s-VU-kSf" firstAttribute="centerX" secondItem="veM-Df-oDf" secondAttribute="centerX" id="I4F-xO-QqG"/>
                             <constraint firstItem="8b8-Jd-pRk" firstAttribute="centerX" secondItem="veM-Df-oDf" secondAttribute="centerX" id="YXH-kh-QuE"/>
                             <constraint firstItem="8b8-Jd-pRk" firstAttribute="centerY" secondItem="veM-Df-oDf" secondAttribute="centerY" id="a0N-id-HSc"/>
                             <constraint firstItem="v4a-yO-p9H" firstAttribute="centerY" secondItem="veM-Df-oDf" secondAttribute="centerY" id="fVP-aX-W5q"/>
+                            <constraint firstItem="v4a-yO-p9H" firstAttribute="top" secondItem="N8s-VU-kSf" secondAttribute="bottom" constant="8" id="g2q-Wk-13e"/>
                             <constraint firstItem="1fe-IW-9Xn" firstAttribute="trailing" secondItem="v4a-yO-p9H" secondAttribute="trailing" constant="80" id="x1f-Kr-pIA"/>
                         </constraints>
                     </view>
