feature/EFHB-5488 added android changes

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="accept">#32E875</color>
     <color name="end">#E9190F</color>
     <color name="call_black">#051014</color>
+    <color name="white">#FFFFFF</color>
 </resources>
