--- a/android/app/src/main/res/layout/listen_loading.xml
+++ b/android/app/src/main/res/layout/listen_loading.xml
@@ -17,21 +17,36 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:alpha="0.2"
+        android:alpha="0.4"
         android:background="@android:color/transparent"
         android:visibility="visible"
         app:SpinKit_Color="#6021de"
         app:SpinKit_Style="DoubleBounce" />
 
-    <TextView
-        android:id="@+id/countDownTimer"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:text="10:00"
-        android:textColor="@color/call_black"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Listening"
+            android:textColor="@color/white"/>
+        <TextView
+            android:id="@+id/countDownTimer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:text="10:00"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
+
 
 
 </RelativeLayout>
