bugfix/EFHB-7985-qurbook-flutter-upgrade-sheela issue fixed.

--- a/android/app/src/main/res/layout/progess_dialog.xml
+++ b/android/app/src/main/res/layout/progess_dialog.xml
@@ -90,7 +90,7 @@
                         android:background="@drawable/edit_text_border"
                         android:orientation="horizontal"
                         android:padding="5dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:weightSum="5">
 
                         <EditText
